# new_admin_panel_sprint_3

./: .env  .env.example  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  index_config.json  init_elastic.py  main.py  pyproject.toml  settings.py
.github/workflows/: code-checker.yaml
etl/: main.py  models.py  settings.py
etl/extract/: extractor.py  models.py  query_builders.py  table_watchers.py
etl/load/: elastic_loader.py
etl/states/: state.py
etl/storages/: json_file_storage.py
etl/table_watcher/: base.py  film_work_watcher.py
etl/transform/: models.py  transformer.py
states/: state.py
storages/: base_storage.py  json_file_storage.py  redis_storage.py
