[tool.ruff]
line-length = 120
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle
    "ERA",  # eradicate
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "T10",  # flake8-debugger
    "W",  # pycodestyle
]
extend-exclude = ["*/migrations/*", "__pycache__", "test_*"]
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.poetry]
name = "new-admin-panel-sprint-3"
version = "0.1.0"
description = ""
authors = ["Andrey Nikitsich <andrey.nikitsich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.16"
pydantic-settings = "^2.1.0"
elasticsearch = "^8.11.1"


[tool.poetry.group.develop.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
